A more detail test on each part (check GearTest) and it should ready to run. Some old functions in models.py is moved to old.py. A image from kitti dataset is added as a test image

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,10 @@
 /tmp/*
 /.vscode
 !/.vscode/*
-/.ipynb_checkpoints
-!/.ipynb_checkpoints/*
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+**/*.ipynb_checkpoints/
+kittidata/.ipynb_checkpoints/*
 submit.bash
 __pycache__/*
 !__pycache__
